# lista-5-instabilidade-das-estrutras

./: .gitignore  README.md  main.py  pyproject.toml
examples/ex01/: ex01.ie  ex01.out
examples/ex02/: ex02.ie  ex02.out
examples/ex03/: ex03.ie  ex03.out
examples/ex04/: ex04.ie  ex04.out  ex04.py
examples/inps_abaqus/: ex01.inp  ex02.inp  ex03.inp
src/examples/: ex01.out  ex02.ie  ex02.out
src/fem_buckling/: assembler.py  boundary_condition.py  mesh.py  model_builder.py  parser.py  result.py  solver.py
src/fem_buckling/assets/: template.out
src/notebooks/: deducao_axial.html  deducao_axial.py  deducao_transversal.html  deducao_transversal.py
