[project]
name = "lista-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.5.0",
    "prettytable>=3.18.0",
    "pytz>=2026.2",
    "scipy>=1.18.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
select = ["I"]
